@@ -462,6 +462,8 @@ public class CheckerMain {
               "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
               "--add-exports",
               "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.internal.opt/jdk.intenal.opt=ALL-UNNAMED",
               // Required because the Checker Framework reflectively accesses private
               // members in com.sun.tools.javac.comp.
               "--add-opens",
